[package]
name = "app"
version = "0.1.0"
authors = ["Paul Sanford <me@paulsanford.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer-runtime = "0.17.1"
shared = { path = "../shared" }
anyhow = "1.0.31"
bincode = "1.3.1"
