[package]
name = "plugin"
version = "0.1.0"
authors = ["Paul Sanford <me@paulsanford.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.64"
wee_alloc = "0.4.5"
shared = { path = "../shared" }
regex = "1.3.9"

[profile.release]
opt-level = "s"
