[package]
name = "shared"
version = "0.1.0"
authors = ["Paul Sanford <me@paulsanford.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.64"
serde = { version = "1.0.114", features = ["derive"] }
bincode = "1.3.1"
anyhow = "1.0.31"
